# graphia

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: graph.rs  main.rs  models.rs
